0126, 0127, 0128 to play-jvm; 2147 java solution